--- a/index.html
+++ b/index.html
@@ -8,25 +8,16 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 
   <style>
-.line1 {
+    
+.line1, .line2, .line3 {
   display: grid;
   grid-template-columns: 200px 200px 200px 200px 200px 200px;
 }
 
-.line2 {
-  display: grid;
-  grid-template-columns: 200px 200px 200px 200px 200px 200px;
-}
-
-.line3 {
-  display: grid;
-  grid-template-columns: 200px 200px 200px 200px 200px 200px;
-}
-
-#box1, #box2, #box3, #box4, #box5, #box6, #box7, #box8, #box9, #box10, #box11, #box12, #box13, #box14, #box15, #box16, #box17, #box18 {
+.qp, .qi {
   border: 2px solid black;
   height: 200px;
-  with: 200px;
+  width: 200px;
   margin: 3px;
 }
 
